@@ -1,3 +1,8 @@
+2004-08-21  Stefan Petersen  <spe@stacken.kth.se>
+
+        * src/gerbv.c: Made sure that only list of short options is 
+          printed when only short options are compiled in.
+
 2004-08-16  Stefan Petersen  <spe@stacken.kth.se>
 
 	* doc/*, example/*: Makefiles.am removed Makefile.in wheh running
